--- a/movies-app/package.json
+++ b/movies-app/package.json
@@ -36,5 +36,8 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^4.11.1"
+  },
+  "devDependencies": {
+    "mini-css-extract-plugin": "^2.7.0"
   }
 }
